--- a/examples/example-simple/blog/templates/blog/add_blog.html
+++ b/examples/example-simple/blog/templates/blog/add_blog.html
@@ -2,8 +2,11 @@
 
 {% block page_content %}
 
-<h2>{% trans 'Hey, I am happy to see you there !' %}</h2>
-<p>{% trans 'Checkout our blog posts below' %}</p>
+<h1>Add blog</h1>
+<form action="{% url 'blog:add_blog' %}" method="post">
+    {{ form.as_p }}
+    {% csrf_token %}
+</form>
 
 {% endblock %}
 
