- Change to http://knacss.com/ as clean css style - Adding submit buttons to forms (add_blog/add_post) - fix form class to ModelForm

--- a/examples/example-simple/blog/templates/blog/_base.html
+++ b/examples/example-simple/blog/templates/blog/_base.html
@@ -3,11 +3,11 @@
 
 <!DOCTYPE html>
 <html>
-  <head lang="{% get_current_language as LANGUAGE_CODE %}">
+  <head>
   
     <title>{% trans 'blog' %}</title>
     {% include 'blog/_meta.html' %}
-    {% include 'blog/_style./html %}
+    {% include 'blog/_style.html' %}
 
   </head>
   <body>
