--- a/examples/example-simple/blog/templates/blog/_style.html
+++ b/examples/example-simple/blog/templates/blog/_style.html
@@ -1,3 +1,3 @@
 {% load static %}
 
-<link rel="stylesheet" type="text/css" href="{% static 'blog/css/style.css' %}"/
+<link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/alsacreations/KNACSS/master/css/knacss.css"/>
