--- a/examples/example-simple/blog/templates/blog/add_blog.html
+++ b/examples/example-simple/blog/templates/blog/add_blog.html
@@ -6,6 +6,7 @@
 <form action="{% url 'blog:add_blog' %}" method="post">
     {{ form.as_p }}
     {% csrf_token %}
+    <input type="submit" value="Submit">
 </form>
 
 {% endblock %}
