--- a/examples/example-simple/blog/templates/blog/_style.html
+++ b/examples/example-simple/blog/templates/blog/_style.html
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/alsacreations/KNACSS/master/css/knacss.css"/>
+<link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/alsacreations/KNACSS/master/css/knacss.css">
