fix style & debug toolbar

--- a/examples/example-simple/blog/templates/blog/_base.html
+++ b/examples/example-simple/blog/templates/blog/_base.html
@@ -13,10 +13,10 @@
   <body>
 
     {% block page_header %}
-    {% end_block %}
+    {% endblock %}
 
     {% block page_content %}
-    {% end_block %}
+    {% endblock %}
 
   </body>
 <html>
